--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "15.12.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
